--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     
     testCompile 'au.com.dius:pact-jvm-consumer-junit:4.0.0-beta.6'
+    testCompile('au.com.dius:pact-jvm-provider-gradle:4.0.0-beta.6')
     
 }
 
@@ -67,21 +68,21 @@ pact {
         pactBrokerUrl = 'http://0.0.0.0:9292/'
         pactBrokerUsername = ''
         pactBrokerPassword = ''
-        version = '3.5.0'
+        version = '0.0.0.SNAPSHOT'
     }
     serviceProviders {
-        ExampleProvider {
+        PricingService {
 			protocol = 'http'
             host = 'localhost'
             port = 8080
             path = '/'
     
             // Test Pacts from local 
-            hasPactsWith('Crypto - All contracts') {
-            pactFileLocation = file("$buildDir/pacts")}
+            //hasPactsWith('Crypto - All contracts') {
+            //pactFileLocation = file("$buildDir/pacts")}
     
             // Test Pacts from Pact Broker
-            hasPactsFromPactBroker('http://0.0.0.0:9292/', authentication: ['Basic','' , '']) 
+            hasPactsFromPactBroker('http://0.0.0.0:9292/pacts/provider/PricingService/consumer/DecisionService/latest') 
             }
         }
 	}	
