--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:28.0-jre'
 
+    compile 'org.springframework.boot:spring-boot-starter-webflux:2.1.8.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-actuator:2.1.8.RELEASE'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.1.8.RELEASE'
 
     testImplementation 'junit:junit:4.12'
